--- a/index.html
+++ b/index.html
@@ -126,45 +126,41 @@
                     <p>For game development I use either <span class="gradient-text"><strong>Godot</strong></span> or
                         <span class="gradient-text"><strong>Gamemaker: Studio</strong></span>, but mostly <span
                             class="gradient-text"><strong>Godot</strong></span>.<br>(currently experimenting with
-                        Unity and RpgMaker)<br>The games I've decided to share here were all made with Godot.</p>
+                        Unity and RpgMaker)<br>The games I've decided to share here were all made with <span class="gradient-text"><strong>Godot</strong></span>.</p>
                     <div class="gameGrid">
-                        <div class="gameItem">
+                        <div class="gameItem" title="Jumping from a high building">
                             <div class="gameItemAAA" style="display: grid;">
-                                <a href=""><div class="gameItemStuff">Gamejolt</div></a>
-                                <a href=""><div class="gameItemStuff">Itch</div></a>
-                                <a href=""><div class="gameItemStuff">newgrounds</div></a>
+                                <a href="https://gamejolt.com/games/jfahb/742024"><div class="gameItemStuff">Gamejolt</div></a>
+                                <a href="https://rngvalue.itch.io/jfahb"><div class="gameItemStuff">Itch.io</div></a>
+                                <a href="https://www.newgrounds.com/portal/view/853626"><div class="gameItemStuff">Newgrounds</div></a>
                             </div>
                             <img style="width: 100%; height: auto" src="gameThumbs\742024-5ce3tn3m-v4.webp" alt="">
                         </div>
-                        <div class="gameItem">
+                        <div class="gameItem" title="DungeonBoard">
                             <div class="gameItemAAA" style="display: grid;">
-                                <a href=""><div class="gameItemStuff">Gamejolt</div></a>
-                                <a href=""><div class="gameItemStuff">Itch</div></a>
-                                <a href=""><div class="gameItemStuff">newgrounds</div></a>
+                                <a href="https://gamejolt.com/games/DungeonBoard/734293"><div class="gameItemStuff">Gamejolt</div></a>
+                                <a href="https://rngvalue.itch.io/dungeonboard"><div class="gameItemStuff">Itch.io</div></a>
+                                <a href="https://www.newgrounds.com/portal/view/850499"><div class="gameItemStuff">Newgrounds</div></a>
                             </div>
                             <img style="width: 100%; height: auto" src="gameThumbs\734293-crop0_9_629_363-ll-bgyhu3ag-v4.webp" alt="">
                         </div>
-                        <div class="gameItem">
+                        <div class="gameItem" title="Frogo makes you cry">
                             <div class="gameItemAAA" style="display: grid;">
-                                <a href=""><div class="gameItemStuff">Gamejolt</div></a>
-                                <a href=""><div class="gameItemStuff">Itch</div></a>
-                                <a href=""><div class="gameItemStuff">newgrounds</div></a>
+                                <a href="https://gamejolt.com/games/frogomakesyoucry/726445"><div class="gameItemStuff">Gamejolt</div></a>
+                                <a href="https://rngvalue.itch.io/frogomakesyoucry"><div class="gameItemStuff">Itch.io</div></a>
+                                <a href="https://www.newgrounds.com/portal/view/847170"><div class="gameItemStuff">Newgrounds</div></a>
                             </div>
                             <img style="width: 100%; height: auto" src="gameThumbs\726445-crop16_72_624_414-d53xzrcr-v4.webp" alt="">
                         </div>
-                        <div class="gameItem">
+                        <div class="gameItem" title="Chaos Machine">
                             <div class="gameItemAAA" style="display: grid;">
-                                <a href=""><div class="gameItemStuff">Gamejolt</div></a>
-                                <a href=""><div class="gameItemStuff">Itch</div></a>
-                                <a href=""><div class="gameItemStuff">newgrounds</div></a>
+                                <a href="https://rngvalue.itch.io/chaosmachine"><div class="gameItemStuff">Itch.io</div></a>
                             </div>
                             <img style="width: 100%; height: auto" src="gameThumbs\3bvoUN.png" alt="">
                         </div>
-                        <div class="gameItem">
+                        <div class="gameItem" title="Bilte'">
                             <div class="gameItemAAA" style="display: grid;">
-                                <a href=""><div class="gameItemStuff">Gamejolt</div></a>
-                                <a href=""><div class="gameItemStuff">Itch</div></a>
-                                <a href=""><div class="gameItemStuff">newgrounds</div></a>
+                                <a href="https://rngvalue.itch.io/bilte"><div class="gameItemStuff">Itch.io</div></a>
                             </div>
                             <img style="width: 100%; height: auto" src="gameThumbs\yGwX5X.png" alt="">
                         </div>
