--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <a href="https://rngvalue.itch.io/jfahb"><div class="gameItemStuff">Itch.io</div></a>
                                 <a href="https://www.newgrounds.com/portal/view/853626"><div class="gameItemStuff">Newgrounds</div></a>
                             </div>
-                            <img style="width: 100%; height: auto" src="gameThumbs\742024-5ce3tn3m-v4.webp" alt="">
+                            <img style="width: 100%; height: auto" src="gameThumbs/742024-5ce3tn3m-v4.webp" alt="">
                         </div>
                         <div class="gameItem" title="DungeonBoard">
                             <div class="gameItemAAA" style="display: grid;">
@@ -142,7 +142,7 @@
                                 <a href="https://rngvalue.itch.io/dungeonboard"><div class="gameItemStuff">Itch.io</div></a>
                                 <a href="https://www.newgrounds.com/portal/view/850499"><div class="gameItemStuff">Newgrounds</div></a>
                             </div>
-                            <img style="width: 100%; height: auto" src="gameThumbs\734293-crop0_9_629_363-ll-bgyhu3ag-v4.webp" alt="">
+                            <img style="width: 100%; height: auto" src="gameThumbs/734293-crop0_9_629_363-ll-bgyhu3ag-v4.webp" alt="">
                         </div>
                         <div class="gameItem" title="Frogo makes you cry">
                             <div class="gameItemAAA" style="display: grid;">
@@ -150,19 +150,19 @@
                                 <a href="https://rngvalue.itch.io/frogomakesyoucry"><div class="gameItemStuff">Itch.io</div></a>
                                 <a href="https://www.newgrounds.com/portal/view/847170"><div class="gameItemStuff">Newgrounds</div></a>
                             </div>
-                            <img style="width: 100%; height: auto" src="gameThumbs\726445-crop16_72_624_414-d53xzrcr-v4.webp" alt="">
+                            <img style="width: 100%; height: auto" src="gameThumbs/726445-crop16_72_624_414-d53xzrcr-v4.webp" alt="">
                         </div>
                         <div class="gameItem" title="Chaos Machine">
                             <div class="gameItemAAA" style="display: grid;">
                                 <a href="https://rngvalue.itch.io/chaosmachine"><div class="gameItemStuff">Itch.io</div></a>
                             </div>
-                            <img style="width: 100%; height: auto" src="gameThumbs\3bvoUN.png" alt="">
+                            <img style="width: 100%; height: auto" src="gameThumbs/3bvoUN.png" alt="">
                         </div>
                         <div class="gameItem" title="Bilte'">
                             <div class="gameItemAAA" style="display: grid;">
                                 <a href="https://rngvalue.itch.io/bilte"><div class="gameItemStuff">Itch.io</div></a>
                             </div>
-                            <img style="width: 100%; height: auto" src="gameThumbs\yGwX5X.png" alt="">
+                            <img style="width: 100%; height: auto" src="gameThumbs/yGwX5X.png" alt="">
                         </div>
                     </div>
                 </section>
