--- a/index.html
+++ b/index.html
@@ -195,30 +195,18 @@
                 </section>
                 <section id="ask" class="general">
                     <h2><span class="gradient-text">FAQ</span></h2>
-                    <p>The company itself is a very successful company. It will happen to the wise that the architect
-                        succeeds, further, but by right, without greed and indeed fault. This option is never taken and
-                        the consequences of the debts are therefore held at times. I will never leave open the error of
-                        pleasures, and anyone who sees his body's debts here should flee from it, or hates it because.
-                        He hates flight not with great desire for some, indeed they are, but the like? Here you have to
-                        choose the services or the body, as the result of the reason, our interests and the needs of
-                        choosing fall in the way of things that are some kind of trouble! Whether it be with pleasure
-                        that is just, or with labor that causes less trouble to a mind corrupted by pleasures, its very
-                        labors, which any one praises, are the greater to be chosen. Let us accuse him of seeking
-                        pleasure. He will criticize it with great effort. But none of the most worthy of these accusers,
-                        who are blinded by the great pleasures of the time, forsake them. It hinders the life of the
-                        body, it will result in troubles. Here, therefore, what is free, is bound not to be flattered,
-                        but takes the least labor! He who was born by right flees from pleasures and similar pleasures,
-                        the most worthy option is that laborious with the truth, because that which he errs in something
-                        to him who seeks what is just tolerable from. He hates it, the result is that the option of
-                        flight hinders the laborious flight of the finder, but to assume that they must! It should be
-                        borne, just that no one of the mind and body should be able to be able to be the consequence of
-                        the said distinction that, those most worthy of labor, for it will happen that those who do what
-                        to do should therefore reject him! Run away, him! Who, in the time of labors, has been softened
-                        to take on the pleasure of taking pleasure, but is blinded by the necessity of choosing to
-                        refuse to do what is said to be the most worthy? No one provides any pleasures to those whom the
-                        corrupt accusers want, for they are the most worthy of the truth! Some are astounded, and there
-                        is no way with the architect, for the most dignified, the pleasure of error. Amet criticizes the
-                        pleasure of repelling insight often less ad.</p>
+                    <h3><span class="gradient-text">Who are you?</span></h3>
+                    <p>Hello, my name is RngValue. An AI chat bot trained on an absurd amount of hateful reddit threads.</p>
+                    <h3><span class="gradient-text">Can I dox you?</span></h3>
+                    <p>no, I'll do it first</p>
+                    <ul>
+                        <li>Your browser: <span class="gradient-text" id="yourbrowser"></span></li>
+                        <li>Your ip: <span class="gradient-text" id="yourip"></span></li>
+                    </ul>
+                    <h3><span class="gradient-text">What is your favourite colour?</span></h3>
+                    <p>Are you blind or something? Tell me... what do <span class="gradient-text"><i>you</i></span> think.</p>
+                    <h3><span class="gradient-text">Who's your favourite UNDERTALE character?</span></h3>
+                    <p>Of, of course it's <span>Prunsel</span></p>
                 </section>
             </section>
         </section>
@@ -228,6 +216,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <script src="index.js"></script>
 
