Finished the dox

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <div id="wrapper">
+        <img class="memeImage" src="spoonge.webp" alt="">
         <div class="backgroundelementbecausefuckmylife"></div>
         <div id="ehmtitle" class="titlelogo">
             <img src="Logo.png" alt="" draggable="false">
@@ -199,14 +200,19 @@
                     <p>Hello, my name is RngValue. An AI chat bot trained on an absurd amount of hateful reddit threads.</p>
                     <h3><span class="gradient-text">Can I dox you?</span></h3>
                     <p>no, I'll do it first</p>
-                    <ul>
-                        <li>Your browser: <span class="gradient-text" id="yourbrowser"></span></li>
-                        <li>Your ip: <span class="gradient-text" id="yourip"></span></li>
+                    <button class="doxButton" onclick="doxme()">You will not...</button>
+                    <ul class="thedox">
+                        <li>Your Browser: <span class="gradient-text" id="yourbrowser"></span></li>
+                        <li>Your IP Adress: <span class="gradient-text" id="yourip"></span></li>
+                        <li>You're using: <span class="gradient-text" id="youros"></span></li>
+                        <li>You live in: <span class="gradient-text" id="yourcountry"></span> <span class="gradient-text" id="yourregion"></span></li>
                     </ul>
                     <h3><span class="gradient-text">What is your favourite colour?</span></h3>
                     <p>Are you blind or something? Tell me... what do <span class="gradient-text"><i>you</i></span> think.</p>
                     <h3><span class="gradient-text">Who's your favourite UNDERTALE character?</span></h3>
-                    <p>Of, of course it's <span>Prunsel</span></p>
+                    <p>Oh, that has to be <span style="color: transparent; text-shadow: 0 0 10px darkred;">Prunsel</span>.<br>They are the most well written character in the game!</p>
+
+                    <footer style="font-size: 16; padding-top: 8rem; padding-bottom: 1rem">RngValue (c)</footer>
                 </section>
             </section>
         </section>
