--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <button class="doxButton" onclick="doxme()">You will not...</button>
                     <ul class="thedox">
                         <li>Your Browser: <span class="gradient-text" id="yourbrowser"></span></li>
-                        <li>Your IP Adress: <span class="gradient-text" id="yourip"></span></li>
+                        <li>Your IP Address: <span class="gradient-text" id="yourip"></span></li>
                         <li>You're using: <span class="gradient-text" id="youros"></span></li>
                         <li>You live in: <span class="gradient-text" id="yourcountry"></span> <span class="gradient-text" id="yourregion"></span></li>
                     </ul>
