--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <div style="position: absolute;" id="forad"></div>
     <div id="wrapper">
         <img class="memeImage" src="spoonge.webp" alt="">
         <div class="backgroundelementbecausefuckmylife"></div>
@@ -207,6 +208,7 @@
                         <li>You're using: <span class="gradient-text" id="youros"></span></li>
                         <li>You live in: <span class="gradient-text" id="yourcountry"></span> <span class="gradient-text" id="yourregion"></span></li>
                     </ul>
+                    <p id="adblockdetectionspan"></p>
                     <h3><span class="gradient-text">What is your favourite colour?</span></h3>
                     <p>Are you blind or something? Tell me... what do <span class="gradient-text"><i>you</i></span> think.</p>
                     <h3><span class="gradient-text">Who's your favourite UNDERTALE character?</span></h3>
