--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <h3><span class="gradient-text">Who's your favourite UNDERTALE character?</span></h3>
                     <p>Oh, that has to be <span style="color: transparent; text-shadow: 0 0 10px darkred;">Prunsel</span>.<br>They are the most well written character in the game!</p>
 
-                    <footer style="font-size: 16; padding-top: 8rem; padding-bottom: 1rem">RngValue (c)</footer>
+                    <footer style="font-size: 16px; padding-top: 8rem; padding-bottom: 1rem">RngValue (c)</footer>
                 </section>
             </section>
         </section>
