--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
                             <h3 style="margin: 0;font-size: var(--normal-font-size); padding-top: 2em;"><span class="gradient-text">e-mail newsletters</span></h3>
                             <p style="width: 90%">If you're interested in my work, you can sign up for my e-mail newsletters.<br>(The input field below does nothing at the moment)</p>
                             <form style="aspect-ratio: 10/2;width: 100%; display: flex; align-items: center; flex-direction: column;" action="/action_page.php">
-                                <label for="fname"><p style="margin: 0; padding: 0;">Your e-mail:</p></label>
+                                <label for="fname" style="margin: 0; padding: 0;">Your e-mail:</label>
                                 <input style="width: 75%" type="text" id="fname" name="fname">
                               </form>
                         </div>
                         <div class="pfpinaboutholder">
                             <img class="pfpinabout" src="FaceOn.png" alt="" onmouseover="this.src='FaceOff.png'"
-                            onmouseout="this.src='FaceOn.png'" alt="">
+                            onmouseout="this.src='FaceOn.png'">
                         </div>
                     </div>
                 </section>
