--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </div>
                     <div class="aboutGridThing">
                         <div style="grid-column-start: 1; grid-column-end: 3; width: 100%; display: flex; flex-direction: column; align-items: center;">
-                            <h3 style="margin: 0; padding: 0;"><span class="gradient-text">Socials (where to contact me)</span></h3>
+                            <h3 style="width: 90%; margin: 0; padding: 0;"><span class="gradient-text">Socials (where to contact me)</span></h3>
                             <div class="socialGrid">
                                 <div class="socialItem"><a href="https://www.youtube.com/channel/UCL34Zh7mFdQ5PKmeF_DI5Bg">
                                         <svg class="roundShit youtubeSS" viewBox="0 0 512 512">
