--- a/index.html
+++ b/index.html
@@ -232,16 +232,16 @@
                     <div class="artGrid">
                         <div><img src="gallery/img1.png" alt=""><p>Image1</p></div>
                         <div><img src="gallery/img2.png" alt=""><p>Image2</p></div>
-                        <div><img src="gallery/img3.png" alt=""><p>Image3</p></div>
-                        <div><img src="gallery/img4.png" alt=""><p>Image4</p></div>
+                        <div><img src="gallery/img3.gif" alt=""><p>Image3</p></div>
+                        <div><img src="gallery/img4.gif" alt=""><p>Image4</p></div>
                         <div><img src="gallery/img5.png" alt=""><p>Image5</p></div>
                         <div><img src="gallery/img6.gif" alt=""><p>Image6</p></div>
-                        <div><img src="gallery/img7.gif" alt=""><p>Image7</p></div>
-                        <div><img src="gallery/img8.png" alt=""><p>Image8</p></div>
+                        <div><img src="gallery/img7.png" alt=""><p>Image7</p></div>
+                        <div><img src="gallery/img8.gif" alt=""><p>Image8</p></div>
                         <div><img src="gallery/img9.png" alt=""><p>Image9</p></div>
                         <div><img src="gallery/img10.gif" alt=""><p>Image10</p></div>
-                        <div><img src="gallery/img11.gif" alt=""><p>Image11</p></div>
-                        <div><img src="gallery/img12.gif" alt=""><p>Image12</p></div>
+                        <div><img src="gallery/img11.png" alt=""><p>Image11</p></div>
+                        <div><img src="gallery/img12.png" alt=""><p>Image12</p></div>
                         <div><img src="gallery/img13.png" alt=""><p>Image13</p></div>
                         <div><img src="gallery/img14.png" alt=""><p>Image14</p></div>
                         <div><img src="gallery/img15.png" alt=""><p>Image15</p></div>
@@ -276,7 +276,12 @@
             </section>
         </section>
     </div>
-
+    <div class="popupimg" style="display: none;">
+        <img class="reallycoolclosebtn" src="closePopBtnInact.png" alt=""
+        onmouseover="this.src='closePopBtn.png'" onmouseout="this.src='closePopBtnInact.png'" draggable="false">
+        <img class="theimg" src="gallery\someoneHD.png">
+        <div class="ccf"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png"></a><br>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></div>
+    </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
