--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
                 </section>
                 <section id="art" class="general">
                     <h2 class="hiddenTitle"><span class="gradient-text">ART</span></h2>
+                    <p class="hidden">These images aren't in any order at the moment.</p>
                     <div class="artGrid">
                         <div class="artGridItem"><img style="background-image: url('gallery/img1.png');" src="gallery/img1.png" alt=""><p>The Sad Mask</p></div>
                         <div class="artGridItem"><img style="background-image: url('gallery/img2.png');" src="gallery/img2.png" alt=""><p>TheGhostQueen</p></div>
